--- a/notes/计算机操作系统.md
+++ b/notes/计算机操作系统.md
@@ -1,6 +1,16 @@
-[TOC]
+- [进程与线程](#-----)
+  * [进程](#--)
+  * [线程](#--)
+  * [区别](#--)
+  * [线程独特之处](#------)
+- [虚拟内存](#----)
+- [进程通信方式](#------)
+- [服务器队列](#-----)
+
+<small><i><a href='http://ecotrust-canada.github.io/markdown-toc/'>Table of contents generated with markdown-toc</a></i></small>
 
 ### 进程与线程
+
 #### 进程
 #### 线程
 #### 区别
