--- a/notes/计算机操作系统.md
+++ b/notes/计算机操作系统.md
@@ -1,26 +1,26 @@
-- [进程与线程](#-----)
-  * [进程](#--)
-  * [线程](#--)
-  * [区别](#--)
-  * [线程独特之处](#------)
-- [虚拟内存](#----)
-- [进程通信方式](#------)
-- [服务器队列](#-----)
+<!-- GFM-TOC -->
+- - [进程与线程](##进程与线程)
+  * [进程](### 进程)
+  * [线程](### 线程)
+  * [区别](### 区别)
+  * [线程独特之处](### 线程独特之处)
+- [虚拟内存](## 虚拟内存)
+- [进程通信方式](## 进程通信方式)
+- [服务器队列](## 服务器队列)
+<!-- GFM-TOC -->
 
-<small><i><a href='http://ecotrust-canada.github.io/markdown-toc/'>Table of contents generated with markdown-toc</a></i></small>
+## 进程与线程
 
-### 进程与线程
+### 进程
+### 线程
+### 区别
+### 线程独特之处
 
-#### 进程
-#### 线程
-#### 区别
-#### 线程独特之处
+## 虚拟内存
 
-### 虚拟内存
+## 进程通信方式
 
-### 进程通信方式
-
-### 服务器队列
+## 服务器队列
 
 
 
