--- a/notes/计算机网络.md
+++ b/notes/计算机网络.md
@@ -1,15 +1,14 @@
-<!-- GFM-TOC -->
-- - [TCP](## TCP)
-  * [TCP三次握手、TCP四次挥手](### TCP三次握手、TCP四次挥手)
-  * [TCP为什么不两次、四次握手和三次挥手](### TCP为什么不两次、四次握手和三次挥手)
-  * [TCP KeepAlive](### TCP KeepAlive)
-  * [TCP拥塞控制](### TCP拥塞控制)
-  * [TCP的select和epoll](### TCP的select和epoll)
-- [HTTP](## HTTP)
-  * [HTTP有哪些方法](### HTTP有哪些方法)
-  * [GET与POST方法区别](### GET与POST方法区别)
-  * [HTTPS](### HTTPS)
-<!-- GFM-TOC -->
+
+-[TCP](##tcp)
+  * [TCP三次握手、TCP四次挥手](###tcp三次握手、TCP四次挥手)
+  * [TCP为什么不两次、四次握手和三次挥手](###tcp为什么不两次、四次握手和三次挥手)
+  * [TCP KeepAlive](###tcp-keepalive)
+  * [TCP拥塞控制](###tcp拥塞控制)
+  * [TCP的select和epoll](###tcp的select和epoll)
+- [HTTP](##http)
+  * [HTTP有哪些方法](###http有哪些方法)
+  * [GET与POST方法区别](###get与post方法区别)
+  * [HTTPS](###https)
 
 ## TCP
 
