--- a/notes/计算机操作系统.md
+++ b/notes/计算机操作系统.md
@@ -9,19 +9,141 @@
 
 <small><i><a href='http://ecotrust-canada.github.io/markdown-toc/'>Table of contents generated with markdown-toc</a></i></small>
 
+### 进程与线程
 
-## 进程与线程
+#### 进程
 
-### 进程
-### 线程
-### 区别
-### 线程独特之处
+进程是一个执行中程序的实例，是系统进行资源分配和调度的独立单位。
 
-## 虚拟内存
+进程控制块 (Process Control Block, PCB) 描述进程的基本信息和运行状态，所谓的创建进程和撤销进程，都是指对 PCB 的操作。
 
-## 进程通信方式
+#### 线程
 
-## 服务器队列
+线程是进程的子任务，是CPU调度和分派的基本单位
+
+#### 进程与线程区别
+
+见《计算机操作系统》（汤小丹第四版76页）
+
+1. 拥有资源：进程是资源分配的基本单位，但是线程不拥有资源，线程可以访问隶属进程的资源。线程共享本进程的地址空间，而进程之间是独立的地址空间。
+2. 调度：线程是独立调度的基本单位，在同一进程中，线程的切换不会引起进程切换，从一个进程中的线程切换到另一个进程中的线程时，会引起进程切换。
+3. 系统开销：由于创建或撤销进程时，系统都要为之分配或回收资源，如内存空间、I/O  设备等，所付出的开销远大于创建或撤销线程时的开销。类似地，在进行进程切换时，涉及当前执行进程 CPU 环境的保存及新调度进程 CPU  环境的设置，而线程切换时只需保存和设置少量寄存器内容，开销很小。
+4. 通信方面：线程间可以通过直接读写同一进程中的数据进行通信，但是进程通信需要借助IPC（进程间通信 InterProcess Communication）。
+
+#### 进程有哪些状态
+
+- 就绪状态（Ready）：进程已获得除CPU以外的所需资源，等待分配CPU资源；
+- 执行状态（Running）：进程已获得CPU，程序正在执行中的状态；
+- 阻塞状态（Block）：正在执行中的进程由于发生某些事件（如I/O请求、申请缓冲失败等）暂时无法继续执行时的状态，即进程的允许受到阻塞。
+
+#### 进程同步
+
+##### 1. 临界区
+
+对临界资源进行访问的那段代码称为临界区。
+
+为了互斥访问临界资源，每个进程在进入临界区之前，需要先进行检查。
+
+```
+// entry section
+// critical section;
+// exit section
+```
+
+##### 2. 同步与互斥
+
+- 同步：多个进程因为合作产生的直接制约关系，使得进程有一定的先后执行关系。
+- 互斥：多个进程在同一时刻只有一个进程能进入临界区。
+
+##### 3. 信号量
+
+信号量（Semaphore）是一个整型变量，可以对其执行 down 和 up 操作，也就是常见的 P 和 V 操作。
+
+- **down**   : 如果信号量大于 0 ，执行 -1 操作；如果信号量等于 0，进程睡眠，等待信号量大于 0；
+- **up**  ：对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
+
+down 和 up 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断。
+
+如果信号量的取值只能为 0 或者 1，那么就成为了   **互斥量（Mutex）**  ，0 表示临界区已经加锁，1 表示临界区
+
+解锁。
+
+##### 4. 管程
+
+使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不容易出错，也使得客户端代码调用更容易。
+
+#### 进程通信
+
+进程同步与进程通信很容易混淆，它们的区别在于：
+
+- 进程同步：控制多个进程按一定顺序执行；
+- 进程通信：进程间传输信息。
+
+进程通信是一种手段，而进程同步是一种目的。也可以说，为了能够达到进程同步的目的，需要让进程进行通信，传输一些进程同步所需要的信息。
+
+##### 1、管道
+
+管道是通过调用 pipe 函数创建的，fd[0] 用于读，fd[1] 用于写。
+
+```
+#include <unistd.h>
+int pipe(int fd[2]);
+```
+
+它具有以下限制：
+
+- 只支持半双工通信（单向交替传输）；
+- 只能在父子进程或者兄弟进程中使用。
+
+##### 2. FIFO
+
+也称为命名管道，去除了管道只能在父子进程中使用的限制。
+
+```
+#include <sys/stat.h>
+int mkfifo(const char *path, mode_t mode);
+int mkfifoat(int fd, const char *path, mode_t mode);
+```
+
+FIFO 常用于客户-服务器应用程序中，FIFO 用作汇聚点，在客户进程和服务器进程之间传递数据。
+
+##### 3. 消息队列
+
+相比于 FIFO，消息队列具有以下优点：
+
+- 消息队列可以独立于读写进程存在，从而避免了 FIFO 中同步管道的打开和关闭时可能产生的困难；
+- 避免了 FIFO 的同步阻塞问题，不需要进程自己提供同步方法；
+- 读进程可以根据消息类型有选择地接收消息，而不像 FIFO 那样只能默认地接收。
+
+##### 4. 信号量
+
+它是一个计数器，用于为多个进程提供对共享数据对象的访问。
+
+##### 5. 共享存储
+
+允许多个进程共享一个给定的存储区。因为数据不需要在进程之间复制，所以这是最快的一种 IPC。
+
+需要使用信号量用来同步对共享存储的访问。
+
+多个进程可以将同一个文件映射到它们的地址空间从而实现共享内存。另外 XSI 共享内存不是使用文件，而是使用内存的匿名段。
+
+##### 6. 套接字socket
+
+与其它通信机制不同的是，它可用于不同机器间的进程通信。
+
+参考
+
+[面试/笔试第二弹 —— 操作系统面试问题集锦](https://github.com/CyC2018/CS-Notes/blob/master/notes/%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%20-%20%E8%BF%9B%E7%A8%8B%E7%AE%A1%E7%90%86.md)
+
+[操作系统面试题目汇总](https://jiangren.work/2020/02/16/%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F%E9%9D%A2%E8%AF%95%E9%A2%98%E7%9B%AE%E6%B1%87%E6%80%BB/)
+
+[计算机操作系统 - 进程管理](https://blog.csdn.net/justloveyou_/article/details/78304294)
+
+### 虚拟内存
+
+### 进程通信方式
+
+### 服务器队列
 
 
 
