--- a/notes/计算机操作系统.md
+++ b/notes/计算机操作系统.md
@@ -13,7 +13,7 @@
 
 #### 进程
 
-进程是一个执行中程序的实例，是系统进行资源分配和调度的独立单位。
+进程是一个执行中程序的实例，是系统进行资源分配独立单位。
 
 进程控制块 (Process Control Block, PCB) 描述进程的基本信息和运行状态，所谓的创建进程和撤销进程，都是指对 PCB 的操作。
 
