修改主从不一致方案

--- a/article/db/数据库主从复制延迟引发问题及解决方案探究.md
+++ b/article/db/数据库主从复制延迟引发问题及解决方案探究.md
@@ -22,7 +22,31 @@ https://g.yuque.com/u1552873/iwiwt3/wlk5uy
 
 
 
+主从同步延迟是必然现象，不是问题。关键看具体业务，因同步延迟带来什么问题，然后再解决。
+
+举个简单的例子
+
+假设某论坛是主从数据库，我发一个帖子后立即刷新页面，因为显示帖子是读，这个时候如果延迟比较厉害，就会提示 404 -———帖子不存在，这就有问题了；我们还要假设用户的容忍度是看见自己的新内容，别人新的内容可以有延迟（实际上延迟是很小的时间单位）。
+
+针对这个假设的问题，可以采取几种方案：
+1、有更新数据后的 读取相关数据动作，都从默认到主库；
+2、利用缓存；插入新的数据，会有last_id返回，组装成数据，缓存到前端。读取此 id 数据时，先从缓存取。
+
+
+
+作者：陆向东
+链接：https://www.zhihu.com/question/20025096/answer/13715272
+。
+
+
+
+1.需要读写强一致性的业务，要强行将读语句路由至Master库
+
 
 
 方案：尽量避免写入后立马从数据库读，如果是异步任务，可以延迟个几秒待记录同步到从库后外读。
+
+
+
+可以在没读取到数据后，去主库再读一次。
 
