--- a/article/db/数据库主从复制延迟引发问题及解决方案探究.md
+++ b/article/db/数据库主从复制延迟引发问题及解决方案探究.md
@@ -1,52 +1,51 @@
-参考
+#### 问题描述：
 
-https://g.yuque.com/u1552873/iwiwt3/wlk5uy
+业务中会出现刚刚写入一个数据库记录成功，但是另一个线程或者服务去数据库查询又查询不到该记录的情况，这种问题通常称为**读写分离的主从同步延迟带来的数据不一致问题**。
 
-# 注意读写分离带来的数据不⼀致问题
+#### 解决方案：
 
-读写分离的⼀个副作⽤是，可能会存在数据不⼀致的情况。原因是，数据库中的数据在主库完成更新后，是异步同步到每个从库上的，这个过程有⼀个微⼩的时间差，这个时间差叫**主从同步延迟**。正常情况下，主从延迟⾮常⼩，不超过1ms。但即使这个⾮常⼩的延迟，也会导致在某⼀个时刻，主库和从库上的数据是不⼀致的。应⽤程序需要能接受并克服这种主从不⼀致的情况，否则就会引发⼀些由于主从延迟导致的数据错误。
+主从同步延迟通常是必然现象，实际上是不可避免的，技术上没有灵丹妙药可以完全解决，最好是根据不同的业务场景，优化业务流程来解决。规避这个问题最关键的⼀点是，我们在设计系统的业务流程时，尽量不要在更新数据之后⽴即去查询更新后的数据。
 
-还是拿订单系统来举例，我们⾃然的设计思路是，⽤⼾从购物⻋⾥发起结算创建订单，进⼊订单⻚，打开⽀付⻚⾯进⾏⽀付，⽀付完成后，按道理应该再返回⽀付之前的订单⻚。但如果这个时候⻢上⾃动返回订单
+下面来根据几个不同的业务场景来制定相应的解决方案。
 
-⻚，就很可能会出现订单状态还是显⽰“未⽀付”。因为，⽀付完成后，订单库的主库中，订单状态已经被更新了，⽽订单⻚查询的从库中，这条订单记录的状态有可能还没更新。怎么解决？
+- 场景1：电商订单
 
-这种问题其实没什么好的技术⼿段来解决，所以你看⼤的电商，它⽀付完成后是不会⾃动跳回到订单⻚的，它增加了⼀个⽆关紧要的“⽀付完成”⻚⾯，其实这个⻚⾯没有任何有效的信息，就是告诉你⽀付成功，然后再放⼀些⼴告什么的。你如果想再看刚刚⽀付完成的订单，需要⼿动点⼀下，这样就很好地规避了主从同步延迟的问题。
+  拿订单系统来举例，我们⾃然的设计思路是，⽤⼾从购物⻋⾥发起结算创建订单，进⼊订单⻚，打开⽀付⻚⾯进⾏⽀付，⽀付完成后，按道理应该再返回⽀付之前的订单⻚。但如果这个时候⻢上⾃动返回订单⻚，就很可能会出现订单状态还是显⽰“未⽀付”。因为，⽀付完成后，订单库的主库中，订单状态已经被更新了，⽽订单⻚查询的从库中，这条订单记录的状态有可能还没更新。
 
-上⾯这个例⼦还只是订单状态显⽰错误，刷新⼀下就好了。我们需要特别注意的，是那些数据更新后，⽴刻需要查询更新后的数据，然后再更新其他数据这种情况。⽐如说在购物⻋⻚⾯，如果⽤⼾修改了某个商品的数量，需要重新计算优惠和总价。更新了购物⻋的数据后，需要⽴即调⽤计价服务，这个时候如果计价服务去读购物⻋的从库，⾮常可能读到旧数据⽽导致计算的总价错误。
+  这种问题其实没什么好的技术⼿段来解决，所以你看⼤的电商，它⽀付完成后是不会⾃动跳回到订单⻚的，它增加了⼀个⽆关紧要的“⽀付完成”⻚⾯，其实这个⻚⾯没有任何有效的信息，就是告诉你⽀付成功，然后再放⼀些⼴告什么的。你如果想再看刚刚⽀付完成的订单，需要⼿动点⼀下，这样就很好地规避了主从同步延迟的问题。
 
-对于这个例⼦，你可以把“更新购物⻋、重新计算总价”这两个步骤合并成⼀个微服务，然后放在⼀个数据库事务中去，同⼀个事务中的查询操作也会被路由到主库，这样来规避主从不⼀致的问题。
+- 场景2：论坛系统
 
-对于这种主从延迟带来的数据不⼀致的问题，没有什么简单⽅便⽽且通⽤的技术⽅案可以解决，我们需要重新设计业务逻辑，尽量规避更新数据后⽴即去从库查询刚刚更新的数据。
+  某论坛是主从数据库，我发一个帖子后立即刷新页面，因为显示帖子是读，这个时候如果延迟比较厉害，就会提示 404 -———帖子不存在，这就有问题了；我们还要假设用户的容忍度是看见自己的新内容，别人新的内容可以有延迟（实际上延迟是很小的时间单位）。
 
-主从同步延迟会导致主库和从库之间出现数据不⼀致的情况，我们的应⽤程序应该能兼容主从延迟，避免因为主从延迟⽽导致的数据错误。规避这个问题最关键的⼀点是，我们在设计系统的业务流程时，尽量不要在更新数据之后⽴即去查询更新后的数据。
+  针对此问题，可以使用以下方案：
 
+  利用缓存；插入新的数据，会有last_id返回，组装成数据，缓存到前端。读取此 id 数据时，先从缓存取。
 
+- 场景3：提现业务（没有实时性要求）
 
-主从同步延迟是必然现象，不是问题。关键看具体业务，因同步延迟带来什么问题，然后再解决。
+  我们的服务有用户提现业务，用户申请提现后，会立即给用户返回“提现成功”，然后通过消息队列的异步任务来访问微信的转账接口，给用户的微信账户转账。转账成功后，给用户的提现记录设置状态为提现成功。有时候由于主从延迟导致在异步任务中读取不到提现记录。
 
-举个简单的例子
+  因为此业务没有实时行要求，针对此问题，可以使用以下方案：
 
-假设某论坛是主从数据库，我发一个帖子后立即刷新页面，因为显示帖子是读，这个时候如果延迟比较厉害，就会提示 404 -———帖子不存在，这就有问题了；我们还要假设用户的容忍度是看见自己的新内容，别人新的内容可以有延迟（实际上延迟是很小的时间单位）。
+  提现的异步任务在消息队列中设置延迟执行时间，假设初次为3秒，用户申请提现3秒后，异步任务开始执行，先读取提现记录，如果读取不到的话，证明主从同步未完成，那么再发起延迟任务4秒后执行，4秒后执行的时候再次读取提现记录，如果还是读取不到，就那么再发起延迟任务5秒后执行，一共延迟执行3次。如果仍然读取不到提现记录的话，说明数据库主从同步出现了问题，可能要等好久之后才能同步成功。这个时候可以不执行该任务了，通过后续的定时任务来将这些提现流程批量执行完成。
 
-针对这个假设的问题，可以采取几种方案：
-1、有更新数据后的 读取相关数据动作，都从默认到主库；
-2、利用缓存；插入新的数据，会有last_id返回，组装成数据，缓存到前端。读取此 id 数据时，先从缓存取。
+- 场景4：银行转账业务（准确性高）
 
+  针对银行转账这样的强事务型任务，没有太高的实时行要求，用户可以忍受等待几秒到十几秒，可以强制读取主库，这样就规避了主从延迟的问题。
 
+- 场景5：实时性很高，准确性不高的业务
 
-作者：陆向东
-链接：https://www.zhihu.com/question/20025096/answer/13715272
-。
+  采用三级缓存方案：写入数据的时候先写本地缓存，再写redis缓存，再写DB。读取数据的时候先读取本地缓存，本地缓存读取不到的话，读取redis缓存，redis读取不到的话，再读取DB，这样可以减轻DB的压力。
 
+- 场景6：实时行较高，准确性比较高的业务
 
+  优化版三级缓存方案：写入数据的时候先写本地缓存，再写redis缓存，再写DB，写入DB成功后再依次在本次缓存和redis缓存中写入字段“db_write_success”为1（**防止写入DB时系统崩溃，未写入DB成功**）。读取数据的时候先读取本地缓存，看db_write_success是否为1，为1的话执行后续流程。否则读取redis缓存，看db_write_success是否为1，为1的话执行后续流程。否则再读取DB从库，如果从库读取失败的话，就直接读取DB主库。
 
-1.需要读写强一致性的业务，要强行将读语句路由至Master库
+  这样既可以减轻DB的压力，又可以防止DB写入失败。
 
+##### 参考
 
+[**MySQL如何应对高并发（二）：读写分离**](https://g.yuque.com/u1552873/iwiwt3/wlk5uy)
 
-方案：尽量避免写入后立马从数据库读，如果是异步任务，可以延迟个几秒待记录同步到从库后外读。
-
-
-
-可以在没读取到数据后，去主库再读一次。
-
+[如何解决主从数据库同步延迟问题？](https://www.zhihu.com/question/20025096/answer/13715272)
